# CppScripter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: App.cpp  App.h  CodeEditor.cpp  CodeEditor.h  MainFrame.cpp  MainFrame.h
